--- a/_includes/2023_data/sponsors.html
+++ b/_includes/2023_data/sponsors.html
@@ -8,19 +8,19 @@
         </div>
         <div class="row">
             <div class="col-md-4 col-sm-6">
-                <a href="#" class="portfolio-link" data-toggle="modal">
+                <a href="https://www.egger.com/" class="portfolio-link" data-toggle="modal">
                     <img loading="lazy" fetchpriority="low" src="../css/2023_style/img/logos/EGGER.png"
                         class="img-responsive img-centered" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
-                <a href="#" class="portfolio-link" data-toggle="modal">
+                <a href="https://cnstefancelmare.ro/" class="portfolio-link" data-toggle="modal">
                     <img loading="lazy" fetchpriority="low" src="../css/2023_style/img/logos/cnscm.png"
                         class="img-responsive img-centered" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
-                <a href="#" class="portfolio-link" data-toggle="modal">
+                <a href="https://www.rockna-audio.com/" class="portfolio-link" data-toggle="modal">
                     <img loading="lazy" fetchpriority="low" src="../css/2023_style/img/logos/Rockna.png"
                         class="img-responsive img-centered" alt="">
                 </a>
